--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Mbuvi Sessions</title>
+  <title>GAGA Sessions</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
@@ -416,9 +416,9 @@
     <div class="title">Hello Tech Enthusiast</div>
     <div class="ticker">
       <ul>
-        <li>welcome to VolTah Xmd sessions!</li>
-        <li>Here you will get session ids for your VolTah bot</li>
-        <li>Bellah Xmd</li>
+        <li>welcome to GAGA-MD sessions!</li>
+        <li>Here you will get session ids for your GAGA bot</li>
+        <li>GAGA-MD</li>
       </ul>
     </div>
   </div>
@@ -427,7 +427,7 @@
     <!-- Hero Section -->
     <div class="hero">
       <h1>Welcome to our session Centre</h1>
-      <p>Your one-stop hub for WhatsApp bot sessions. Get your QR or pair code, deploy VolTah XMD, and join the tech revolution!</p>
+      <p>Your one-stop hub for WhatsApp bot sessions. Get your QR or pair code, deploy GAGA-MD, and join the tech revolution!</p>
     </div>
 
     <!-- Features Section -->
@@ -443,7 +443,7 @@
         <button onclick="window.location.href='/pair'" class="btn">Get Pair Code</button>
       </div>
       <div class="feature-card">
-        <h3>Deploy VolTah XMD</h3>
+        <h3>Deploy GAGA-MD</h3>
         <p>Deploy your own bot for free here.</p>
         <button onclick="window.location.href='https://deploy.mbuvitech.site/'" class="btn">Deploy Now</button>
       </div>
@@ -452,7 +452,7 @@
     <!-- About Section -->
     <div class="about">
       <h2>About Us</h2>
-      <p>We’re a crew of tech enthusiasts building tools for WhatsApp bot creators. Our mission? Make bot setup fast, secure, and awesome. Join the VolTah XMD community!</p>
+      <p>We’re a crew of tech enthusiasts building tools for WhatsApp bot creators. Our mission? Make bot setup fast, secure, and awesome. Join the GAGA-MD community!</p>
     </div>
 
     <!-- Contact Section -->
@@ -465,13 +465,13 @@
 
   <!-- Footer -->
   <div class="footer">
-    <p>©Giddy Tennor</p>
-    <p>Contact <b>Giddy Tennor</b></p>
+    <p>©Traxxion Inc Tech</p>
+    <p>Contact <b>GAGA</b></p>
     <div class="social-links">
-      <a href="https://youtube.com/@giddynokia" target="_blank"><i class="fab fa-youtube"></i></a>
-      <a href="https://www.instagram.com/giddy_tennor_?igsh=YzZ0NDRoaXFxM2Zk" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://t.me/tennormodzcoder" target="_blank"><i class="fab fa-telegram"></i></a>
-      <a href="https://github.com/Tennor-modz" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://wa.me/263780078177" target="_blank"><i class="fab fa-whatsapp"></i></a>
+      <a href="https://wa.me/263716857999?=" target="_blank"><i class="fab fa-whatsapp"></i></a>
+      <a href="https://t.me/Xaphnathpanior" target="_blank"><i class="fab fa-telegram"></i></a>
+      <a href="https://github.com/LGT09" target="_blank"><i class="fab fa-github"></i></a>
     </div>
   </div>
 
@@ -482,12 +482,12 @@
         sms: "+254787909276",
         sms_color: "#129BF4",
         whatsapp: "+254756182478",
-        telegram: "@giddy_tennor",
+        telegram: "@xaphnathpanior",
         call_to_action: "Message us",
         button_color: "#FF318E",
         position: "left",
         order: "sms,whatsapp,telegram",
-        pre_filled_message: "hey Giddy Tennor i have come with greetings from your session",
+        pre_filled_message: "hey Traxxion Tech i have come with greetings from your session",
       };
       var proto = 'https:', host = "getbutton.io", url = proto + '//static.' + host;
       var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
