--- a/pair.html
+++ b/pair.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trashcore pairing site Dashboard</title>
+  <title>GAGA pairing site Dashboard</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <style>
     :root {
@@ -320,7 +320,7 @@
   <header class="header">
     <div class="logo-container">
       <img src="https://url.bwmxmd.online/Adams.twcferrg.jpg" alt="Trashcore bot Logo" class="logo-img">
-      <div class="logo-text">𝐓𝐑𝐀𝐒𝐇𝐂𝐎𝐑𝐄-𝐏𝐀𝐈𝐑𝐈𝐍𝐆</div>
+      <div class="logo-text">GAGA-MD 𝐏𝐀𝐈𝐑𝐈𝐍𝐆</div>
     </div>
     
     <!-- Battery Indicator -->
@@ -335,7 +335,7 @@
     <!-- Pairing Box -->
     <div class="box">
       <h2>PAIRING CODE</h2>
-      <h5>TRASHCORE BOTS </h5>
+      <h5>GAGA-MD BOTS </h5>
       <p>Please enter your number without country code</p>
       
       <div class="input-container">
@@ -354,7 +354,7 @@
     <div class="music-player">
       <h3>PLAY NOW</h3>
       <div class="music-title">PLAY SONG</div>
-      <div class="music-subtitle">by Trashcore devs</div>
+      <div class="music-subtitle">by Traxxion Tech devs</div>
       <button class="play-btn" onclick="togglePlay()">
         <i class="fas fa-pause" id="play-icon"></i>
       </button>
